# Lilypad

./: Cargo.toml  README.md  readme.md
doc/: doc.md  structure.md
ui/: ui.md
ui/desktop/: Cargo.toml  desktop.md
ui/desktop/src/: main.rs  src.md
